<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/tpBegin"
    android:layout_alignParentRight="true"
    android:layout_alignTop="@+id/txtCallCountThreshhold"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/activeLabel" />
<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCalls" />
    <EditText
        android:id="@+id/txtCallCountThreshhold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:width="@dimen/newnewiwdth" >
    </EditText>

    

    <TextView
        android:id="@+id/tvCallCountThreshholdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRaiseVolume" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblTimeSpan" />

    <TimePicker
        android:id="@+id/tpBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TimePicker
        android:id="@+id/tpEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp" />

</LinearLayout>